@@ -19,7 +19,7 @@ class PlayerPropertyTest {
     void addHouseWhenStreetNotOwned() {
         PlayerProperty testProperty = new PlayerProperty(new Street("Boardwalk", 39, "street", 2, "DARKBLUE", 200, 600, 1400, 1700, 2000, 200, 50, 200, 400));
         assertThrows(IllegalStateException.class, () -> {
-            testProperty.addHouse(Collections.emptyList());
+            testProperty.addHouse(List.of(testProperty));
         });
     }
 
@@ -27,8 +27,21 @@ class PlayerPropertyTest {
     void addHouseWhenStreetOwned() {
         PlayerProperty testProperty = new PlayerProperty(new Street("Boardwalk", 39, "street", 2, "DARKBLUE", 200, 600, 1400, 1700, 2000, 200, 50, 200, 400));
         testProperty.addHouse(List.of(
-                new PlayerProperty(new Street("Boardwalk", 39, "street", 2, "DARKBLUE", 200, 600, 1400, 1700, 2000, 200, 50, 200, 400)),
+                testProperty,
                 new PlayerProperty(new Street("Park Place", 37, "street", 2, "DARKBLUE", 175, 500, 1100, 1300, 1500, 200, 35, 175, 350))));
         assertEquals(1, testProperty.getHouseCount());
+    }
+
+    @Test
+    void addHouseWithIncorrectHouseCount() {
+        PlayerProperty testProperty = new PlayerProperty(new Street("Boardwalk", 39, "street", 2, "DARKBLUE", 200, 600, 1400, 1700, 2000, 200, 50, 200, 400));
+        testProperty.addHouse(List.of(
+                testProperty,
+                new PlayerProperty(new Street("Park Place", 37, "street", 2, "DARKBLUE", 175, 500, 1100, 1300, 1500, 200, 35, 175, 350))));
+        assertThrows(IllegalStateException.class, () -> {
+           testProperty.addHouse(List.of(
+                   testProperty,
+                   new PlayerProperty(new Street("Park Place", 37, "street", 2, "DARKBLUE", 175, 500, 1100, 1300, 1500, 200, 35, 175, 350))));
+        });
     }
 }
